# aqueduct

./: .buildinfo  .gitignore  artifact.html  backend.html  cli.html  configuration.html  environment.html  export_notebook_for_tests.ipynb  export_notebook_with_config.ipynb  functor.html  genindex.html  getting_started.html  index.html  objects.inv  overview.html  pyproject.toml  search.html  searchindex.js  task_advanced.html  test.py
_sources/: artifact.rst.txt  backend.rst.txt  configuration.rst.txt  environment.rst.txt  index.rst.txt  overview.rst.txt
_sources/api/: api.rst.txt  backend.rst.txt  functor.rst.txt
api/: api.html  artifact.html  backend.html  functor.html  task.html
aqueduct/: __init__.py  artifact.py  backend.py  store.py  task.py
aqueduct/backend/: __init__.py  backend.py  dask.py  immediate.py  util.py
docs/: requirements.txt
docs/source/: artifact.rst  cli.rst  computation.rst  conf.py  functor.rst  getting_started.rst  index.rst  saving_results.rst  store.rst  task.rst  task_advanced.rst  tasks.rst
docs/source/api/: getting_started.rst  task.rst
sample_project/: __main__.py
src/aqueduct/: __init__.py  artifact.py  base.py  binding.py  cli.py  config.py  ipython.py  notebook.py  ressource.py  store.py  task.py  task_tree.py  taskresolve.py  util.py
src/aqueduct/artifact/: __init__.py  artifact.py  base.py  composite.py  dataframe.py  grib.py  http.py  inmemory.py  local.py  path_artifact.py  pickle.py  util.py  xarray.py
tests/: mapreduce_task.py  notebook_for_tests.ipynb  notebook_with_config.ipynb  parallel_task.py  return_backend.ipynb  test_artifact.py  test_backend.py  test_cache.py  test_conf.py  test_dask_backend.py  test_dask_graph_backend.py  test_functor.py  test_inline_task.py  test_notebook.py  test_parser.py  test_puretask.py  test_quicktask.py  test_repeater.py  test_store.py  test_task.py  test_type_tree.py  test_util.py
tests/backend/: test_backend.py  test_dask_utils.py  test_multiprocessing.py
tests/dask/: test_dask_parallel_task.py
tests/discovery/: other_tasks_for_test.py  tasks_for_test.py  test_discovery.py
(+49 files in other folders)
