[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aqueduct"
version = "20230523"
dependencies = [
    "bleach>=5",
    "dask",
    "distributed",
    "hydra-core",
    "ipykernel",
    "omegaconf",
    "nbformat",
    "nbconvert",
    "jupyter_client",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "isort",
    "black",
    "furo",
    "myst-parser",
    "nb-clean",
    "parquet-tools",
    "sphinx",
]

[tool.black]
line-length = 88
target-version = ['py311']

[project.scripts]
aq = "aqueduct.cli:cli"

[tool.pytest.ini_options]
pythonpath = "src"
