[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aqueduct"
version = "20240311"
dependencies = [
    "bleach>=5",
    "dask",
    "distributed",
    "hydra-core",
    "ipykernel",
    "lark",
    "omegaconf",
    "nbformat",
    "nbconvert",
    "jupyter_client",
    "tqdm",
    "pyarrow",
]

[project.optional-dependencies]
dev = [
    "isort",
    "black",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser",
    "nb-clean",
    "parquet-tools",
    "sphinx>=6.1.3",
    "docutils>=0.19",
]

[tool.black]
line-length = 88
target-version = ['py311']

[project.scripts]
aq = "aqueduct.cli.cli:cli"

[tool.pytest.ini_options]
pythonpath = "src"
